Automate btree structure test