@@ -1,5 +1,6 @@
 package de.ahbnr.semanticweb.java_debugger.tests.system
 
+import de.ahbnr.semanticweb.java_debugger.tests.system.utils.runScriptTest
 import org.junit.jupiter.api.extension.ExtensionContext
 import org.junit.jupiter.api.parallel.Execution
 import org.junit.jupiter.api.parallel.ExecutionMode
@@ -9,7 +10,6 @@ import org.junit.jupiter.params.provider.ArgumentsProvider
 import org.junit.jupiter.params.provider.ArgumentsSource
 import java.nio.file.Path
 import java.util.stream.Stream
-import kotlin.io.path.pathString
 import kotlin.streams.asStream
 import kotlin.test.assertEquals
 
@@ -19,41 +19,9 @@ class ScriptTests {
     @ArgumentsSource(ScriptProvider::class)
     @Execution(ExecutionMode.CONCURRENT)
     fun scriptTest(scriptPath: Path) {
-        // Running the tests in a subprocess instead of subthread for isolation
+        val exitValue = runScriptTest(scriptPath)
 
-        val javaHome = System.getProperty("java.home")
-        val javaBin = Path.of(javaHome, "bin", "java").pathString
-        val classpath = System.getProperty("java.class.path")
-
-        val command = listOf(
-            javaBin,
-            "-cp", classpath,
-            "--add-opens", "jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED",
-            "de.ahbnr.semanticweb.java_debugger.SemanticJavaDebuggerKt",
-            "--color",
-            scriptPath.toString()
-        )
-
-        val process = ProcessBuilder(command)
-            .redirectError(ProcessBuilder.Redirect.INHERIT)
-            .redirectOutput(ProcessBuilder.Redirect.INHERIT)
-            .redirectInput(ProcessBuilder.Redirect.INHERIT)
-            .inheritIO()
-            .start()
-
-        process.waitFor();
-
-
-        // val debugger = SemanticJavaDebugger()
-
-        // debugger.main(
-        //     arrayOf(
-        //         "--color",
-        //         scriptPath.toString()
-        //     )
-        // )
-
-        assertEquals(0, process.exitValue(), "Debugger script failed.")
+        assertEquals(0, exitValue, "Debugger script failed.")
     }
 
     class ScriptProvider : ArgumentsProvider {
